# lexa

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  LICENSE  Makefile  README.md  STEP-BY-STEP.md  bench.py  dune-project  effekt_vs_lexi.py  flake.nix  koka.nix  lexa  package-lock.json  package.json  preserve_none_no_save_rbp.patch  results-example.md  results-paper.md  sstal.opam
.vim/: filetype.vim
artifact_eval/: README  bench.py  config.py  effekt_vs_lexi.py  plots.py  plotting_runtimes2_aug_4.csv  plotting_runtimes_aug_4_8_59.csv  result_effekt_scheduler.csv  result_effekt_scheduler_notick.csv  run_racket.py  utils.py
benchmark-programs/: Makefile  README.md  flake.nix
icfp/: README  lambdaman.c  lambdaman.lx
lexi-vscode-extension/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
nix/: SciencePlots.nix  bdwgc.nix  bdwgc.patch  clang18.nix  effektOOPSLA23.nix  effekt_0_2_2.nix  effekt_latest.nix  jetbrains-mono.nix  koka.nix  substitude_char_in_effekt.patch
racket-artifact/: README  a-salt.rkt  a-sstal.rkt  artifact.rkt  programs.rkt  salt.rkt  sstal.rkt  t-salt.rkt  t-sstal.rkt  tests.IR
research/: README
scripts/: .gitignore  README  bench.py  config.py  final_plotting_runtimes.csv  final_plotting_runtimes2.csv  final_runtimes.csv  plots.py  plotting_runtimes2_8_22.csv  plotting_runtimes2_8_31.csv  plotting_runtimes2_aug_4.csv  plotting_runtimes_8_22.csv  plotting_runtimes_8_26.csv  plotting_runtimes_8_31.csv  plotting_runtimes_aug_21.csv  plotting_runtimes_aug_4_8_59.csv  (+6 more)
(+486 files in other folders)
